--- a/frontend_cryptoTools/CMakeLists.txt
+++ b/frontend_cryptoTools/CMakeLists.txt
@@ -2,7 +2,7 @@
 
 file(GLOB_RECURSE SRCS *.cpp)
 
-set(BOOST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../thirdparty/linux/boost/")
+set(BOOST_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/../thirdparty/boost/")
 
 set(Boost_USE_STATIC_LIBS        ON) # only find static libs
 set(Boost_USE_MULTITHREADED      ON)
